# awesome-list-generator

./: .gitignore  CONTRIBUTING.md  DESIGN.md  GEMINI.md  Pipfile  README.md  TESTME.md  pyproject.toml  resource_items.yaml  test.py
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-documentation.yml  04-other.yml
.github/workflow/: publish-package.yml
.github/workflows/: publish-package.yml
src/awesome_list/: __init__.py  __main__.py  _about.py  awesome_items.py  cli.py  default_config.py  generator.py  html_writer.py  logger.py  markdown_writer.py  models.py  resource_items.py  utils.py
src/awesome_list/web-template/: main.html  toc.html
src/awesome_list/web-template/css/: base.css
tests/: conftest.py  resource_items.yaml  test.py  test_awesome_items.py  test_github_metadata.py  test_update_item.py  test_utils.py
tests/big-empty/: awesome-list-2.yaml  awesome-list.yaml
tests/config/: footer.md  header.md
tests/rally/: rally_items.yaml  rally_test.py
tests/sap/: sap_items.yaml  sap_test.py
