[project]
name = "awesomelist-generator"
version = "0.1.0"
description = "Create markdown based Awesome Lists from yaml files."
readme = "README.md"
# Repository = "https://github.com/derekvincent/awesome-list-generator"
requires-python = ">=3.12"
authors = [
    { name = "Derek Vincent", email = "derek@kemiakl.io" },
]
license = { text = "MIT" }
keywords = ["awesome-list", "generator"]

dependencies = [
    "click",
    "pyyaml",
    "bs4",
    "requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
awesome-list-generator = "awesome_list.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[dependency-groups]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
this-package = { path = "src", editable = true }
